--- a/css/bookings.css
+++ b/css/bookings.css
@@ -6,7 +6,6 @@ body {
     font-family: Arial, sans-serif;
 }
 
-
 .header {
     display: flex;
     justify-content: center;
@@ -22,6 +21,7 @@ body {
     border-bottom: 1px solid #ddd;
     font-family: sans-serif;
     height: 60px;
+    margin: 1px 100px;
 }
 
 .nav-left .nav-link {
@@ -30,14 +30,14 @@ body {
     font-size: 25px;
     color: #555;
     font-weight: 700;
-    padding: 30px 50px;
+    padding: 30px 30px;
     height: 100%;
 }
 
 .nav-link.active {
     background-color: #4285F4;
     color: white;
-    padding: 26px 50px;
+    padding: 26px 30px;
 }
 
 .search-input {
@@ -101,3 +101,19 @@ nav a {
     padding: 10px;
     text-align: left;
 }
+
+.bookings-table a {
+    color: #4285F4;
+}
+
+.foto-perfil {
+    display: flex;
+    align-items: center;
+
+}
+
+.foto-perfil img {
+    max-width: 50px;
+    padding-right: 10px;
+}
+
