--- a/css/myRides.css
+++ b/css/myRides.css
@@ -21,6 +21,7 @@ body {
     border-bottom: 1px solid #ddd;
     font-family: sans-serif;
     height: 60px;
+    margin: 1px 100px;
 }
 
 .nav-left .nav-link {
@@ -29,14 +30,14 @@ body {
     font-size: 25px;
     color: #555;
     font-weight: 700;
-    padding: 30px 50px;
+    padding: 30px 30px;
     height: 100%;
 }
 
 .nav-link.active {
     background-color: #4285F4;
     color: white;
-    padding: 26px 50px;
+    padding: 26px 30px;
 }
 
 .search-input {
