pagina ride details terminado

--- a/css/rideDetails.css
+++ b/css/rideDetails.css
@@ -71,63 +71,128 @@ nav a {
     color: black;
 }
 
-.configuration-header h2 {
+.ride-details-header h2 {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.configuration-header h2 {
-    font-size: 50px;
+.ride-details-header h2 {
+    font-size: 30px;
     color: #555;
     font-weight: lighter;
     margin-top: 30px;
     margin-bottom: 10px;
 }
 
-.configuration-header hr {
-    margin: 0px 880px;
+.ride-details-header hr {
+    margin: 0px 44%;
 }
 
-.configuration-body {
+.user-profile {
+    margin-top: 1%;
     display: flex;
     flex-direction: column;
+    align-items: center;
+}
+
+.user-profile img {
+    width: 75px;
+    border: 1px solid #555;
+    border-radius: 40px;
+}
+
+.ride-details-body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
-    min-height: 60vh;
-    gap: 20px;
+    width: 630px;
+    margin: auto auto;
 }
 
-.configuration-body>div:not(.form-actions) {
+.departure-arrive-wrapper {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    margin: 20px 0;
+
+}
+
+.departure-arrive-information {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    font-size: 16px;
+    padding: 0px 75px;
+}
+
+.departure-arrive-information span {
+    color: #555;
+}
+
+.user-profile h3 {
+    font-size: 13px;
+}
+
+.form-group-days>div {
+    padding-bottom: 10px;
+}
+
+.form-group-days>div>label {
+    padding: 0px 19px;
+}
+
+.form-group-inline {
+    display: flex;
+    justify-content: space-between;
+}
+
+.form-group-inline>div {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    width: 300px;
-    margin-left: 33%;
+    padding: 0px 73px;
 }
 
-.configuration-body>div.configuration-options-second-part {
-    width: 33%;
+.form-group-inline>div>select {
+    padding: 7px;
+    width: 140px;
+    max-width: 200px;
 }
 
-.configuration-body label {
+.form-group-inline>div>input {
+    padding: 7px;
+    width: 80px;
+    max-width: 100px;
+}
+
+.vehicle-details-title {
     margin-bottom: 5px;
+    margin-right: 83%;
+    margin-top: 50px;
 }
 
-.configuration-body input[type="text"],
-.configuration-body textarea {
-    width: 100%;
-    padding: 10px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+.vehicle-details {
+    display: flex;
+    border: 1px solid #555;
+    padding: 50px 1px;
+    justify-content: space-between;
+}
+
+.vehicle-details>div {
+    display: flex;
+    flex-direction: column;
+    max-width: 240px;
+    padding: 1px 35px;
 }
 
 .form-actions {
     display: flex;
     justify-content: space-between;
-    padding: 70px 1px;
-    margin-left: 33%;
-    margin-right: 33%;
+    padding: 13px 0px;
+    align-items: center;
+    width: 100%;
+    margin-top: 60px;
 }
 
 .form-actions>button {
@@ -135,6 +200,7 @@ nav a {
     padding: 10px 80px;
     background-color: #4285F4;
     color: white;
+
 }
 
 .form-actions>a {
