--- a/css/bookings.css
+++ b/css/bookings.css
@@ -12,12 +12,20 @@ body {
     align-items: center;
 }
 
+.search-input {
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    font-size: 14px;
+    padding: 10px 30px;
+    margin: 10px 40px;
+}
+
 .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
     background: #f3f3f3;
-    padding: 10px 20px;
+    padding: 10px 0px;
     border-bottom: 1px solid #ddd;
     font-family: sans-serif;
     height: 60px;
@@ -30,22 +38,17 @@ body {
     font-size: 25px;
     color: #555;
     font-weight: 700;
-    padding: 30px 30px;
+    padding: 26px 30px;
     height: 100%;
+}
+
+.nav-right {
+    padding: 0px 20px;
 }
 
 .nav-link.active {
     background-color: #4285F4;
     color: white;
-    padding: 26px 30px;
-}
-
-.search-input {
-    border-radius: 6px;
-    border: 1px solid #ccc;
-    font-size: 14px;
-    padding: 10px 30px;
-    margin: 10px 40px;
 }
 
 .user-icon {
@@ -109,11 +112,9 @@ nav a {
 .foto-perfil {
     display: flex;
     align-items: center;
-
 }
 
 .foto-perfil img {
     max-width: 50px;
     padding-right: 10px;
 }
-
