--- a/css/editProfile.css
+++ b/css/editProfile.css
@@ -34,7 +34,7 @@ body {
     justify-content: space-between;
     align-items: center;
     background: #f3f3f3;
-    padding: 10px 20px;
+    padding: 10px 0px;
     border-bottom: 1px solid #ddd;
     font-family: sans-serif;
     height: 60px;
@@ -47,14 +47,17 @@ body {
     font-size: 25px;
     color: #555;
     font-weight: 700;
-    padding: 30px 30px;
+    padding: 26px 30px;
     height: 100%;
+}
+
+.nav-right {
+    padding: 0px 20px;
 }
 
 .nav-link.active {
     background-color: #4285F4;
     color: white;
-    padding: 26px 30px;
 }
 
 .search-input {
