Se aplico cambios en el header, se aplico funcionalidad al settings del nav(editProfile), tambien se agrego el submenu que requerian las paginas(en los que se mostraba el menu)

--- a/css/editRide.css
+++ b/css/editRide.css
@@ -14,15 +14,10 @@ body {
     padding: 0px 0px;
 }
 
-.header h1 {
-    font-size: 3rem;
-    padding-left: 15px;
-    font-weight: bold;
-}
-
 .header img {
-    max-width: 100px;
-    width: 52px;
+    max-width: 300px;
+    width: 300px;
+    margin: 20px auto;
 }
 
 .navbar {
