--- a/css/bookings.css
+++ b/css/bookings.css
@@ -10,6 +10,14 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 0px 0px;
+    padding: 0px 0px;
+}
+
+.header img {
+    max-width: 300px;
+    width: 300px;
+    margin: 20px auto;
 }
 
 .search-input {
@@ -83,6 +91,7 @@ nav a {
     display: flex;
     justify-content: center;
     align-items: center;
+    
 }
 
 .booking-header h2 {
@@ -96,6 +105,9 @@ nav a {
     width: 90%;
     border-collapse: collapse;
     margin: 0 auto;
+}
+.bookings-table th{
+    background-color: #bbb9b9;
 }
 
 .bookings-table th,
@@ -117,4 +129,47 @@ nav a {
 .foto-perfil img {
     max-width: 50px;
     padding-right: 10px;
+}
+
+.user-menu {
+    position: relative;
+    display: inline-block;
+}
+
+.user-menu input[type="checkbox"] {
+    display: none;
+}
+
+.dropdown-menu {
+    display: none;
+    position: absolute;
+    right: 0;
+    background-color: white;
+    border: 1px solid #ddd;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    min-width: 150px;
+    top: 50px;
+}
+
+.dropdown-menu a {
+    color: #555;
+    padding: 10px 15px;
+    text-decoration: none;
+    display: block;
+    border-bottom: 1px solid black;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+}
+
+.submenu-logout {
+    border-top: 1px solid black;
+}
+
+.dropdown-menu a:hover {
+    background-color: #f3f3f3;
+}
+
+.user-menu input[type="checkbox"]:checked+.dropdown-menu {
+    display: block;
 }
