--- a/css/login.css
+++ b/css/login.css
@@ -10,14 +10,15 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 0px 0px;
+    padding: 0px 0px;
 }
 
-.header h1 {
-    font-size: 2.7rem;
-    padding-left: 10px;
-    font-weight: bold;
+.header img {
+    max-width: 300px;
+    width: 300px;
+    margin: 20px auto;
 }
-
 .page-container {
     display: flex;
     flex-direction: column;
