--- a/css/register.css
+++ b/css/register.css
@@ -6,24 +6,25 @@ body {
   font-family: Arial, sans-serif;
 }
 
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0px 0px;
+  padding: 0px 0px;
+}
+
+.header img {
+  max-width: 300px;
+  width: 300px;
+  margin: 20px auto;
+}
+
 .page-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   height: 90%;
-}
-
-.header {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 20px;
-}
-
-.header h1 {
-  font-size: 3rem;
-  padding-left: 10px;
-  font-weight: bold;
 }
 
 .form h2 {
