--- a/css/searchRides.css
+++ b/css/searchRides.css
@@ -10,6 +10,14 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 0px 0px;
+    padding: 0px 0px;
+}
+
+.header img {
+    max-width: 300px;
+    width: 300px;
+    margin: 20px auto;
 }
 
 .navbar {
