--- a/css/newRide.css
+++ b/css/newRide.css
@@ -67,42 +67,35 @@ body {
     margin: -12px 5px;
 }
 
-footer,
-nav {
-    margin-top: auto;
-    text-align: center;
-    font-size: 0.9rem;
-    color: gray;
-    padding: 10px 0;
-}
-
-nav a {
-    margin: 0 10px;
-    text-decoration: none;
-    color: black;
-}
-
-.new-ride-section {
+.new-ride-header h2 {
     display: flex;
+    justify-content: center;
     align-items: center;
-    flex-direction: column;
+    font-size: 30px;
+    color: #555;
+    font-weight: lighter;
+    margin-top: 2%;
+    margin-bottom: 0.5%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.new-ride-section h2 {
-    border-bottom: 1px solid #555;
+.new-ride-header hr {
+    margin: 0px 44%;
+    margin-bottom: 2%;
 }
 
 .new-ride-main {
     display: flex;
     gap: 20px;
     max-width: 800px;
+    margin: auto auto;
     flex-direction: column;
 }
 
+
 .form-group-left {
     display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
+    justify-content: space-between;
 }
 
 .form-group-left>div {
@@ -235,4 +228,19 @@ nav a {
 
 .user-menu input[type="checkbox"]:checked+.dropdown-menu {
     display: block;
+}
+
+footer,
+nav {
+    margin-top: auto;
+    text-align: center;
+    font-size: 0.9rem;
+    color: gray;
+    padding: 10px 0;
+}
+
+nav a {
+    margin: 0 10px;
+    text-decoration: none;
+    color: black;
 }
