--- a/css/register.css
+++ b/css/register.css
@@ -18,6 +18,8 @@ body {
   max-width: 300px;
   width: 300px;
   margin: 20px auto;
+  margin-bottom: 4%;
+  margin-top: 3%;
 }
 
 .page-container {
@@ -30,10 +32,12 @@ body {
 .form h2 {
   display: flex;
   justify-content: center;
-  font-size: 3.5em;
+  font-size: 3em;
   font-weight: lighter;
   color: #444;
-  margin: -0px 1px;
+  margin: 0 0;
+  margin-bottom: 0.5%;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .registration-body {
@@ -91,7 +95,7 @@ input {
 }
 
 .cta-buttons {
-  margin: 30px auto;
+  margin: 3% auto;
   text-align: center;
 }
 
@@ -119,9 +123,10 @@ input {
 .cta-buttons div:last-child a {
   background-color: #444;
   color: white;
-  padding: 10px 30px;
+  padding: 10px 50px;
   border-radius: 5px;
   text-decoration: none;
+
 }
 
 footer,
