--- a/css/rideDetails.css
+++ b/css/rideDetails.css
@@ -20,6 +20,22 @@ body {
     margin: 20px auto;
 }
 
+.ride-details-header h2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    color: #555;
+    font-weight: lighter;
+    margin-top: 2%;
+    margin-bottom: 0.5%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.ride-details-header hr {
+    margin: 0px 42%;
+}
+
 .navbar {
     display: flex;
     justify-content: space-between;
@@ -80,22 +96,6 @@ nav a {
     margin: 0 10px;
     text-decoration: none;
     color: black;
-}
-
-.ride-details-header h2 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 30px;
-    color: #555;
-    font-weight: lighter;
-    margin-top: 2%;
-    margin-bottom: 0.5%;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-.ride-details-header hr {
-    margin: 0px 44%;
 }
 
 .user-profile {
@@ -188,7 +188,7 @@ nav a {
 
 .vehicle-details>div {
     display: flex;
-    flex-direction: column;
+    gap: 2%;
     max-width: 240px;
     padding: 1px 35px;
 }
