--- a/css/editProfile.css
+++ b/css/editProfile.css
@@ -6,10 +6,6 @@ body {
     font-family: Arial, sans-serif;
 }
 
-.page-container {
-    height: 90%;
-}
-
 .header {
     display: flex;
     justify-content: center;
@@ -22,6 +18,20 @@ body {
     max-width: 300px;
     width: 300px;
     margin: 20px auto;
+}
+
+.form-title h2 {
+    font-size: 40px;
+    color: #555;
+    font-weight: lighter;
+    text-align: center;
+    margin-top: 2%;
+    margin-bottom: 0.5%;
+}
+
+.form-title hr{
+    margin: 0px 43%;
+    margin-bottom: 4%;
 }
 
 .navbar {
@@ -69,19 +79,6 @@ body {
     border-radius: 50%;
     border: 2px solid #555;
     margin: -12px 5px;
-}
-
-.form-title {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.form-title h2 {
-    font-size: 40px;
-    color: #555;
-    font-weight: lighter;
-    border-bottom: 1px solid #555;
 }
 
 .form-body {
